# eplouribousse-back

./: .coveragerc  .dockerignore  .env.sample  .gitignore  .gitlab-ci.yml  .justfile  .pre-commit-config.yaml  .safety-project.ini  CHANGELOG.md  MANIFEST.in  README.md  TECHNICAL_SETUP.md  _docker-compose.dev.yaml  docker-compose.yaml  docker-prestart.sh  fabfile.py  generate-requirements.sh  manage.py  pyproject.toml  run_tests.py  setup.py  sonar-project.properties  tox.ini
docker/app/: Dockerfile
docs/: Makefile  conf.py  index.rst  technical-setup.md
epl/: TECHNICAL_SETUP.md  middleware.py  models.py  schema_serializers.py  urls.py  validators.py  views.py  wsgi.py
epl/apps/project/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
epl/apps/project/filters/: __init__.py  collection.py  project.py  resource.py
epl/apps/project/management/commands/: purge_logs.py
epl/apps/project/migrations/: 0001_initial.py  0002_library.py  0003_alter_library_alias_alter_library_code_and_more.py  0004_userrole_project_userrole_role_valid.py  0004_userrole_project_userrole_role_valid_squashed_0005_alter_userrole_project.py  0005_alter_userrole_project.py  0006_alter_library_options_alter_project_options_and_more.py  0007_remove_project_project_project_status_valid_and_more.py  0008_alter_project_status.py  0008_alter_project_status_collection.py  0008_project_settings_alter_project_status_collection.py  0009_alter_collection_title.py  0009_project_invites.py  0010_remove_project_project_project_status_valid_and_more.py  0010_rename_invites_project_invitations.py  0011_alter_collection_library_alter_collection_project.py  0011_collection_alias_collection_exclusion_reason_and_more.py  0011_project_libraries_alter_project_invitations.py  0012_actionlog.py  0013_remove_library_is_alternate_site_projectlibrary_and_more.py  0014_alter_actionlog_ip_alter_project_name_and_more.py  0015_collection_is_result_collection_alter_project_name_and_more.py  0016_migrate_collection_to_resource.py  0017_remove_collection_code_alter_collection_resource_and_more.py  0018_create_comment_model.py  0019_segment_remove_userrole_unique_user_role_project_and_more.py  0020_remove_segment_unique_collection_order_and_more.py  0021_remove_collection_code_remove_collection_title_and_more.py  0022_anomaly_model.py  0023_anomaly_resource_status.py  0024_issn_pub_history_and_numbering_fields_on_resource.py  0025_copy_field_content_from_collection_to_resource.py  0026_remove_issn_pub_history_and_numbering_fields_on_collection.py  0027_resource_validations.py  0028_alter_resource_status.py  0029_alter_resource_title.py
epl/apps/project/models/: __init__.py  anomaly.py  choices.py  collection.py  comment.py  library.py  logging.py  project.py  segment.py
epl/apps/project/permissions/: anomaly.py  collection.py  library.py  project.py  projectlibrary.py  resource.py  segment.py
epl/apps/project/serializers/: anomaly.py  collection.py  common.py  contact.py  dashboard.py  library.py  mixins.py  nested.py  project.py  projectlibrary.py  resource.py  segment.py
epl/apps/project/tests/factories/: anomaly.py  collection.py  library.py  project.py  resource.py  segment.py  user.py
epl/apps/project/tests/models/: test_library.py  test_project.py  test_resource.py  test_user_role.py  test_userrole.py
epl/apps/project/tests/permissions/: test_anomaly_permissions.py
epl/apps/project/tests/serializers/: test_collection_positionning.py  test_library.py  test_project.py  test_project_user.py  test_projectserializer.py  test_projectuserserializer.py
epl/apps/project/views/: anomaly.py  collection.py  contact.py  dashboard.py  librairy.py  library.py  project.py  projectlibrary.py  resource.py  segment.py
epl/apps/tenant/: admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
epl/apps/tenant/migrations/: 0001_initial.py  0002_consortium_settings_domain_front_domain_and_more.py  0003_rename_settings_consortium_tenant_settings.py
epl/apps/tenant/tests/: test_views.py
epl/apps/user/: admin.py  apps.py  authentication.py  extensions.py  filters.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
epl/apps/user/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_managers.py  0004_alter_user_options.py  0004_tenantuserrole.py  0005_user_settings.py
epl/libs/: cas.py  csv_import.py  filters.py  language.py  pagination.py  saml.py  schema.py
epl/locale/fr/LC_MESSAGES/: django.po
epl/schemas/: project_alert_settings.schema.json  project_settings.schema.json  resource_instruction_turns.schema.json  user_settings.schema.json
epl/services/permissions/: serializers.py
epl/services/project/: notifications.py
epl/services/project/tests/: test_notifications.py
epl/services/tenant/: __init__.py
epl/services/user/: email.py
epl/settings/: base.py  dev.py  docker.py  preprod.py  prod.py  test.py  unittest.py
epl/settings/saml2/: saml_config.py  sxb.epl-api.localhost.py  t1-eplouribousse-api-pprd.app.unistra.fr.py  t2-eplouribousse-api-pprd.app.unistra.fr.py
epl/templates/: 403.html  base.html
epl/templates/admin/: login.html
epl/templates/emails/: confirm_account_creation.txt  invite_project_admin_to_review.txt  invite_project_admins_to_review.txt  invite_project_managers_to_launch.txt  invite_to_epl.txt  notify_anomalies.txt  notify_anomaly_resolved.txt  notify_anomaly_resolved_controller.txt  notify_arbitration_type0.txt  notify_arbitration_type1.txt  notify_control.txt  notify_instruction_turn.txt  notify_positioning.txt  notify_resultant_report_available.txt  password_changed.txt  password_reset.txt  project_launched.txt
epl/templates/pdf/: resulting-report.html
epl/templatetags/: dipstrapfiles.py  iso_datetime.py
epl/tests/: __init__.py  test_validator.py
epl/tests/services/email/: test_user_email.py
epl/tests/services/permissions/: test_acl_serialize_mixin.py
fabfile/: __init__.py  migrate.py  sentry.py
requirements/: common.txt  dev.txt  preprod.txt  prod.txt  test.txt
(+56 files in other folders)
