[project]
name = "epl"
version = "1.0.4"
description = "Web application to facilitate the deduplication of periodicals within a group of libraries"
authors = [
    { name = "DIP, Direction du numérique, Unistra", email = "dnum-dip@unistra.fr" }
]
maintainers = [
    { name = "DIP, Direction du numérique, Unistra", email = "dnum-dip@unistra.fr" }
]
readme = "README.md"
license = "CECILL-2.1"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.13"
dependencies = [
    "cryptography (>=46.0.3,<47.0.0)",
    "django (>=5.2,<6.0)",
    "django-cas-sso (>=1.2.8,<2.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-ipware (>=7.0.1,<8.0.0)",
    "django-smart-ratelimit[redis] (>=0.8.11,<0.9.0)",
    "django-tenants (>=3.7.0,<4.0.0)",
    "django-typer[rich] (>=3.4.0,<4.0.0)",
    "django-weasyprint (>=2.4.0,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-camel-case (>=1.4.2,<2.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "djangosaml2 (>=1.10.1,<2.0.0)",
    "drf-nested-routers (>=0.95.0,<0.96.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "ipython (>=9.0.2,<10.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyopenssl (>=25.3.0,<26.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-stdnum (>=2.1,<3.0)",
    "redis[hiredis] (>=7.0.1,<8.0.0)",
    "sentry-sdk (>=2.25.0,<3.0.0)",
    "zxcvbn (>=4.5.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
django-debug-toolbar = "^5.1.0"
django-stubs = "^5.2.8"
django-watchfiles = "^1.4.0"
djangorestframework-stubs = "^3.16.6"
factory-boy = "^3.3.3"
parameterized = "^0.9.0"
pre-commit = "^4.2.0"
pycodestyle = "^2.13.0"
pylint = "^3.3.6"
ruff = "^0.11.2"
sphinx = "^8.2.3"
tox = "^4.25.0"


[tool.poetry.group.test.dependencies]
chaussette-backport = "1.3.1"
waitress = "3.0.2"


[tool.poetry.group.preprod.dependencies]
chaussette-backport = "1.3.1"
waitress = "3.0.2"


[tool.poetry.group.prod.dependencies]
chaussette-backport = "1.3.1"
gunicorn = "^23.0.0"
waitress = "3.0.2"
whitenoise = "^6.11.0"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".venv",
    "*/migrations/*",
    "epl/settings/*",
    "fabfile",
    "setup.py",
]


[tool.ruff.lint]
extend-select = [
    "UP", "W", "I", "S", "DJ", "PTH", "C4", "INT"
]
ignore = ["UP031"] # pour ignorer les f-string de traduction
